# linuxcnc-grpc

./: .bazelproject  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  cc_deps.bzl  regen_cpp_proto.sh  repositories.bzl  rm_cpp_proto.sh
cpp/: BUILD  BUILD.bazel  command_writer.cc  command_writer.hh  component.cc  component.hh  emcDecode.cc  error_reader.cc  error_reader.hh  hal_handler.cc  hal_handler.hh  linuxcnc_server.cc  status_reader.cc  status_reader.hh
cpp/reader/: BUILD.bazel  error_reader.cc  error_reader.hh  status_reader.cc  status_reader.hh
cpp/writer/: BUILD.bazel  command_writer.cc  command_writer.hh
java/: BUILD
java/ro/dragossusi/grpc/linuxcnc/: BUILD  Main.kt  Utils.kt
java/ro/dragossusi/grpc/linuxcnc/main/: BUILD  Main.kt
proto/: BUILD  linuxcnc.proto
proto/hal/: component.proto  pin.proto
proto/status/: BUILD  task_status.proto
proto/status/axis/: axis.proto
proto/status/io/: BUILD.bazel  io.proto  io_status.proto
proto/status/joint/: BUILD.bazel  joint_status.proto
proto/status/motion/: BUILD.bazel  motion.proto
proto/status/spindle/: BUILD.bazel
proto/status/task/: BUILD.bazel  task_status.proto
proto/status/tool/: BUILD.bazel  tool.proto  tool_status.proto
proto/status/traj/: traj.proto
