load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "io_status_proto",
    srcs = ["io_status.proto"],
    deps = [
        "//proto/status/tool:tool_status_proto",
    ],
)

cc_proto_library(
    name = "io_status_cc_proto",
    deps = [":io_status_proto"],
)
