load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "task_status_proto",
    srcs = ["task_status.proto"],
    deps = [
        "//proto/status:length_unit_proto",
        "//proto/status:position_proto",
    ],
)

cc_proto_library(
    name = "task_status_cc_proto",
    deps = [":task_status_proto"],
)
